<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph_main"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.shopease.app.ui.home.HomeFragment"
        android:label="@string/home" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.shopease.app.ui.search.SearchFragment"
        android:label="@string/search" />
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.shopease.app.ui.cart.CartFragment"
        android:label="@string/cart" />
    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.shopease.app.ui.orders.OrdersFragment"
        android:label="@string/orders" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.shopease.app.ui.profile.ProfileFragment"
        android:label="@string/profile" />

    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.shopease.app.ui.product.ProductDetailFragment"
        android:label="Product Detail">
        <argument
            android:name="productId"
            app:argType="string" />
    </fragment>
</navigation>
